# StrategyLab

./: Cargo.toml  README.md
.github/workflows/: update-stocks.yml
docs/: README.md  index.html  script.js  styles.css
docs/data/: stocks.json
docs/docs/data/: stocks.json
src/: lib.rs  main.rs  scorecard.rs
src/backtest/: engine.rs  mod.rs  result.rs
src/signals/: bottom_reverse.rs  mod.rs  price.rs  volume.rs
src/signals/pattern/: bottom_reverse.rs  mod.rs
src/signals/price/: close.rs  mod.rs  open.rs
src/signals/volume/: decline.rs  mod.rs  surge.rs
src/stock/: data_provider.rs  indicators.rs  mock_data.rs  mod.rs
src/stock/indicators/: mod.rs  oscillator.rs  trend.rs  utils.rs  volatility.rs
src/strategies/: atr.rs  breakthrough_pullback.rs  macd.rs  mod.rs  rsi.rs  volume_decline.rs
src/strategies/reversal/: breakthrough_pullback.rs  mod.rs
src/strategies/trend/: atr.rs  mod.rs
src/strategies/volume/: mod.rs  volume_decline.rs
src/targets/: combined_target.rs  guard_target.rs  mod.rs  return_target.rs
src/utils/: metrics.rs
