[package]
name = "strategy_lab"
version = "0.1.0"
edition = "2021"

[dependencies]
egostrategy_datahub = "0.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
chrono-tz = "0.10.3"
log = "0.4"
env_logger = "0.11.8"
rayon = "1.10.0"
thiserror = "2.0.12"
anyhow = "1.0.98"
clap = { version = "4.0", features = ["derive"] }
toml = "0.8.8"
