[package]
name = "strategy_lab"
version = "0.1.0"
edition = "2021"

[dependencies]
egostrategy_datahub = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
chrono = "0.4.42"
chrono-tz = "0.10.3"
log = "0.4.29"
env_logger = "0.11.8"
rayon = "1.11.0"
thiserror = "2.0.17"
anyhow = "1.0.100"
clap = { version = "4.0", features = ["derive"] }
toml = "0.9.8"
